[package]
authors = ["$param.author_name$ <$param.author_email_lower_case$>"]
edition = "2018"
name = "$name_snake_case$"
version = "$version$"

[dependencies]
clap = {version = "4.0.13", features = ["derive"]}
dotenv = "0.15.0"
{{#if with_toml}}
toml = "0.7"
serde = {version = "1.0", features = ["derive"]}
{{/if}}
